<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".view.userpref.UserPrefActivity">

<!--messages-->
    <TextView
        android:id="@+id/headline_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/headline_messages"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_reguler"
        android:text="@string/txt_messages"
        android:textColor="@color/darkgrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_messages" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/breed"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_messages">

        <TextView
            android:id="@+id/txt_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/txt_breeds"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_breed">

            <RadioButton
                android:id="@+id/btnpersian"
                android:layout_width="86dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btnpersian"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

            <RadioButton
                android:id="@+id/btncoon"
                android:layout_width="82dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btncoon"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

            <RadioButton
                android:id="@+id/btnlocal"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btnlocal"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

            <RadioButton
                android:id="@+id/btnmaine"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btnmaine"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gender"
        android:layout_width="363dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breed">

        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/txt_gender"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_gender">

            <RadioButton
                android:id="@+id/btnmale"
                android:layout_width="113dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btnmale"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

            <RadioButton
                android:id="@+id/btnfemale"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btnfemale"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/age"
        android:layout_width="368dp"
        android:layout_height="99dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender">

        <TextView
            android:id="@+id/txt_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/txt_age"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_age">

        <RadioButton
            android:id="@+id/btnbaby"
            android:layout_width="95dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:buttonTint="@color/lightorange"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btnbaby"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

        <RadioButton
            android:id="@+id/btnyoung"
            android:layout_width="94dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:buttonTint="@color/lightorange"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btnyoung"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

            <RadioButton
                android:id="@+id/btnadult"
                android:layout_width="86dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btnadult"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

            <RadioButton
                android:id="@+id/btnsenior"
                android:layout_width="89dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:buttonTint="@color/lightorange"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btnsenior"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_breed" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/radius_btn2"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/next"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />


</androidx.constraintlayout.widget.ConstraintLayout>
